# Cantabile

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  LICENSE  README.md  overrides.example.csv  pyproject.toml
governance/ci/: quality-gates.yaml
governance/policies/: architecture_contracts.md
governance/tools/: enforce_size.py
src/cantabile/: __init__.py
src/cantabile/adapters/analyzers/: lyrics.py  mir.py
src/cantabile/adapters/export/: __init__.py  filesystem.py
src/cantabile/adapters/ingest/: exportify.py
src/cantabile/adapters/providers/: youtube.py
src/cantabile/adapters/separators/: demucs.py
src/cantabile/adapters/store/: sqlite_store.py
src/cantabile/adapters/suggesters/: bandcamp_soundcloud.py
src/cantabile/application/services/: match.py
src/cantabile/application/use_cases/: acquire_audio.py  analyze.py  import_playlist.py  report.py  separate.py
src/cantabile/domain/: models.py  observation.py  value_objects.py
src/cantabile/ports/: analyzer.py  report.py  separator.py  source.py  store.py
src/cantabile/presentation/cli/: app.py
src/cantabile/presentation/gui/: __init__.py  actions.py  app.py  jobs.py  server.py
src/cantabile/presentation/gui/static/: app.js  base.css  layout.css  panels.css  responsive.css  styles.css  visuals.css  visuals.js
src/cantabile/presentation/gui/static/css/: app.css
src/cantabile/presentation/gui/static/js/: app.js  charts.js  data.js  explore.js  theme.js
src/cantabile/presentation/gui/templates/: index.html
src/cantabile/shared/: settings.py
tests/unit/: test_gui.py  test_report_export.py
tests/unit/domain/: test_core.py  test_lyrics.py  test_mir.py  test_stems.py
