[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cantabile"
version = "0.1.0"
description = "Playlist audio + structure lab. Imports Exportify CSV, fetches real audio, analyzes structure. SGHM architecture."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Justin K. Lietz" }]
dependencies = [
    "yt-dlp>=2024.1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
lyrics = ["requests>=2.31", "beautifulsoup4>=4.12"]
audio = ["librosa>=0.10", "soundfile>=0.12", "numpy>=1.24", "scipy>=1.10"]
separation = ["demucs>=4.0"]
gui = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1", "python-multipart>=0.0.9"]
all = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.10",
    "demucs>=4.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
dev = ["import-linter>=2.0", "ruff>=0.4", "mypy>=1.8", "pytest>=8.0", "httpx2>=2.3"]

[project.scripts]
cantabile = "cantabile.presentation.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cantabile.presentation.gui" = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/unit/domain/test_lyrics.py" = ["E402"]
"tests/unit/domain/test_mir.py" = ["E402"]
"tests/unit/domain/test_stems.py" = ["E402"]
"tests/unit/test_gui.py" = ["E402"]

[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "librosa.*",
    "numpy.*",
    "requests.*",
    "scipy.*",
    "yt_dlp.*",
]
ignore_missing_imports = true
